--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           >
           <ul class="header-list">
             <li class="header-menu-item">
-              <a href="./index.html" class="header-menu-link">Studio</a>
+              <a href="./index.html" class="header-menu-link current">Studio</a>
             </li>
             <li class="header-menu-item">
               <a href="" class="header-menu-link">Portfolio</a>
@@ -68,6 +68,11 @@
           <h2 class="visually-hidden">Title</h2>
           <ul class="features-list">
             <li class="features-list-item">
+              <div class="icon-background">
+                <svg width="64" height="64" class="features-icon">
+                  <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Strategy</h3>
               <p class="features-item-text">
                 Our goal is to identify the business problem to walk away with
@@ -75,6 +80,11 @@
               </p>
             </li>
             <li class="features-list-item">
+              <div class="icon-background">
+                <svg width="64" height="64" class="features-icon">
+                  <use href="./images/symbol-defs.svg#icon-clock-1"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Punctuality</h3>
               <p class="features-item-text">
                 Bring the key message to the brand's audience for the best price
@@ -82,6 +92,11 @@
               </p>
             </li>
             <li class="features-list-item">
+              <div class="icon-background">
+                <svg width="64" height="64" class="features-icon">
+                  <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Diligence</h3>
               <p class="features-item-text">
                 Research and confirm brands that present the strongest digital
@@ -89,6 +104,11 @@
               </p>
             </li>
             <li class="features-list-item">
+              <div class="icon-background">
+                <svg width="64" height="64" class="features-icon">
+                  <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
+                </svg>
+              </div>
               <h3 class="features-subtitle">Technologies</h3>
               <p class="features-item-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -113,6 +133,44 @@
               <div class="team-member-info">
                 <h3 class="team-name">Mark Guerrero</h3>
                 <p class="position">Product Designer</p>
+                <ul class="socials-list">
+                  <li class="socials-list-item">
+                    <a class="team-icon-link" href="" target="_blank">
+                      <svg width="16" height="16" class="socials-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list-item">
+                    <a class="team-icon-link" href="" target="_blank">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list-item">
+                    <a class="team-icon-link" href="" target="_blank">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list-item">
+                    <a class="team-icon-link" href="" target="_blank">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-img">
@@ -125,6 +183,44 @@
               <div class="team-member-info">
                 <h3 class="team-name">Tom Ford</h3>
                 <p class="position">Frontend Developer</p>
+                <ul class="socials-list">
+                  <li class="socials-list-item">
+                    <a class="team-icon-link" href="" target="_blank">
+                      <svg width="16" height="16" class="socials-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list-item">
+                    <a class="team-icon-link" href="" target="_blank">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list-item">
+                    <a class="team-icon-link" href="" target="_blank">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list-item">
+                    <a class="team-icon-link" href="" target="_blank">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-img">
@@ -137,6 +233,44 @@
               <div class="team-member-info">
                 <h3 class="team-name">Camila Garcia</h3>
                 <p class="position">Marketing</p>
+                <ul class="socials-list">
+                  <li class="socials-list-item">
+                    <a class="team-icon-link" href="" target="_blank">
+                      <svg width="16" height="16" class="socials-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list-item">
+                    <a class="team-icon-link" href="" target="_blank">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list-item">
+                    <a class="team-icon-link" href="" target="_blank">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list-item">
+                    <a class="team-icon-link" href="" target="_blank">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-img">
@@ -149,6 +283,44 @@
               <div class="team-member-info">
                 <h3 class="team-name">Daniel Wilson</h3>
                 <p class="position">UI Designer</p>
+                <ul class="socials-list">
+                  <li class="socials-list-item">
+                    <a class="team-icon-link" href="" target="_blank">
+                      <svg width="16" height="16" class="socials-icon">
+                        <use
+                          href="./images/symbol-defs.svg#icon-instagram-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list-item">
+                    <a class="team-icon-link" href="" target="_blank">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-twitter-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list-item">
+                    <a class="team-icon-link" href="" target="_blank">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-facebook-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="socials-list-item">
+                    <a class="team-icon-link" href="" target="_blank">
+                      <svg width="16" height="16">
+                        <use
+                          href="./images/symbol-defs.svg#icon-linkedin-1"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -160,49 +332,107 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item-picture">
-              <img src="./images/img1.jpg" alt="Banking App" width="360" />
+              <div class="portfolio-cover-wrap">
+                <img src="./images/img1.jpg" alt="Banking App" width="360" />
+                <div class="portfolio-text-wrap">
+                  <p class="portfolio-img-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+              </div>
               <div class="portfolio-item-info">
                 <h3 class="portfolio-item-title">Banking App</h3>
                 <p class="portfolio-item-description">App</p>
               </div>
             </li>
             <li class="portfolio-item-picture">
-              <img src="./images/img2.jpg" alt="Cashless Payment" width="360" />
-              <div class="portfolio-item-info">
-                <h3 class="portfolio-item-title">Cashless Payment</h3>
-                <p class="portfolio-item-description">Marketing</p>
+              <div class="portfolio-cover-wrap">
+                <img
+                  src="./images/img2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                />
+                <div class="portfolio-text-wrap">
+                  <p class="portfolio-img-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="portfolio-item-info">
+                  <h3 class="portfolio-item-title">Cashless Payment</h3>
+                  <p class="portfolio-item-description">Marketing</p>
+                </div>
               </div>
             </li>
             <li class="portfolio-item-picture">
-              <img src="./images/img3.jpg" alt="Meditation App" width="360" />
-              <div class="portfolio-item-info">
-                <h3 class="portfolio-item-title">Meditation App</h3>
-                <p class="portfolio-item-description">App</p>
+              <div class="portfolio-cover-wrap">
+                <img src="./images/img3.jpg" alt="Meditation App" width="360" />
+                <div class="portfolio-text-wrap">
+                  <p class="portfolio-img-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="portfolio-item-info">
+                  <h3 class="portfolio-item-title">Meditation App</h3>
+                  <p class="portfolio-item-description">App</p>
+                </div>
               </div>
             </li>
             <li class="portfolio-item-picture">
-              <img src="./images/img4.jpg" alt="Taxi Service" width="360" />
-              <div class="portfolio-item-info">
-                <h3 class="portfolio-item-title">Taxi Service</h3>
-                <p class="portfolio-item-description">Marketing</p>
+              <div class="portfolio-cover-wrap">
+                <img src="./images/img4.jpg" alt="Taxi Service" width="360" />
+                <div class="portfolio-text-wrap">
+                  <p class="portfolio-img-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="portfolio-item-info">
+                  <h3 class="portfolio-item-title">Taxi Service</h3>
+                  <p class="portfolio-item-description">Marketing</p>
+                </div>
               </div>
             </li>
             <li class="portfolio-item-picture">
-              <img
-                src="./images/img5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-              />
-              <div class="portfolio-item-info">
-                <h3 class="portfolio-item-title">Screen Illustrations</h3>
-                <p class="portfolio-item-description">Design</p>
+              <div class="portfolio-cover-wrap">
+                <img
+                  src="./images/img5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                />
+                <div class="portfolio-text-wrap">
+                  <p class="portfolio-img-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="portfolio-item-info">
+                  <h3 class="portfolio-item-title">Screen Illustrations</h3>
+                  <p class="portfolio-item-description">Design</p>
+                </div>
               </div>
             </li>
             <li class="portfolio-item-picture">
-              <img src="./images/img6.jpg" alt="Online Courses" width="360" />
-              <div class="portfolio-item-info">
-                <h3 class="portfolio-item-title">Online Courses</h3>
-                <p class="portfolio-item-description">Marketing</p>
+              <div class="portfolio-cover-wrap">
+                <img src="./images/img6.jpg" alt="Online Courses" width="360" />
+                <div class="portfolio-text-wrap">
+                  <p class="portfolio-img-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </p>
+                </div>
+                <div class="portfolio-item-info">
+                  <h3 class="portfolio-item-title">Online Courses</h3>
+                  <p class="portfolio-item-description">Marketing</p>
+                </div>
               </div>
             </li>
           </ul>
@@ -210,14 +440,50 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="logo-title"
-          >Web<span class="logo-colored-footer">Studio</span></a
-        >
-        <p class="footer-descr">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div>
+          <a href="./index.html" class="logo-title"
+            >Web<span class="logo-colored-footer">Studio</span></a
+          >
+          <p class="footer-descr">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+
+        <div>
+          <p class="footer-socials-text">Social media</p>
+          <ul class="footer-icons-list">
+            <li class="socials-footer-item">
+              <a class="socials-icon-link" href="" target="_blank">
+                <svg width="24" height="24" class="socials-icon">
+                  <use href="./images/symbol-defs.svg#icon-instagram-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-footer-item">
+              <a class="socials-icon-link" href="" target="_blank">
+                <svg width="24" height="24" class="socials-icon">
+                  <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-footer-item">
+              <a class="socials-icon-link" href="" target="_blank">
+                <svg width="24" height="24" class="socials-icon">
+                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-footer-item">
+              <a class="socials-icon-link" href="" target="_blank">
+                <svg width="24" height="24" class="socials-icon">
+                  <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
