--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
       </section>
 
       <section class="features">
-        <div class="container">
+        <div class="container features-container">
           <h2 class="visually-hidden">Title</h2>
           <ul class="features-list">
             <li class="features-list-item">
               <div class="icon-background">
                 <svg width="64" height="64" class="features-icon">
-                  <use href="./images/symbol-defs.svg#icon-antenna-1"></use>
+                  <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </div>
               <h3 class="features-subtitle">Strategy</h3>
@@ -82,7 +82,7 @@
             <li class="features-list-item">
               <div class="icon-background">
                 <svg width="64" height="64" class="features-icon">
-                  <use href="./images/symbol-defs.svg#icon-clock-1"></use>
+                  <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </div>
               <h3 class="features-subtitle">Punctuality</h3>
@@ -94,7 +94,7 @@
             <li class="features-list-item">
               <div class="icon-background">
                 <svg width="64" height="64" class="features-icon">
-                  <use href="./images/symbol-defs.svg#icon-diagram-1"></use>
+                  <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </div>
               <h3 class="features-subtitle">Diligence</h3>
@@ -106,7 +106,7 @@
             <li class="features-list-item">
               <div class="icon-background">
                 <svg width="64" height="64" class="features-icon">
-                  <use href="./images/symbol-defs.svg#icon-astronaut-1"></use>
+                  <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </div>
               <h3 class="features-subtitle">Technologies</h3>
@@ -137,36 +137,28 @@
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
                       <svg width="16" height="16" class="socials-icon">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
                       <svg width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
                       <svg width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
                       <svg width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -187,36 +179,28 @@
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
                       <svg width="16" height="16" class="socials-icon">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
                       <svg width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
                       <svg width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
                       <svg width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -237,36 +221,28 @@
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
                       <svg width="16" height="16" class="socials-icon">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
                       <svg width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
                       <svg width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
                       <svg width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -287,36 +263,28 @@
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
                       <svg width="16" height="16" class="socials-icon">
-                        <use
-                          href="./images/symbol-defs.svg#icon-instagram-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-instagram-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
                       <svg width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-twitter-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
                       <svg width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-facebook-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
                       <svg width="16" height="16">
-                        <use
-                          href="./images/symbol-defs.svg#icon-linkedin-1"
-                        ></use>
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
                   </li>
@@ -441,7 +409,7 @@
     </main>
     <footer class="footer">
       <div class="container footer-container">
-        <div>
+        <div class="footer-logo-descr">
           <a href="./index.html" class="logo-title"
             >Web<span class="logo-colored-footer">Studio</span></a
           >
@@ -457,28 +425,28 @@
             <li class="socials-footer-item">
               <a class="socials-icon-link" href="" target="_blank">
                 <svg width="24" height="24" class="socials-icon">
-                  <use href="./images/symbol-defs.svg#icon-instagram-1"></use>
+                  <use href="./images/icons.svg#icon-instagram-1"></use>
                 </svg>
               </a>
             </li>
             <li class="socials-footer-item">
               <a class="socials-icon-link" href="" target="_blank">
                 <svg width="24" height="24" class="socials-icon">
-                  <use href="./images/symbol-defs.svg#icon-twitter-1"></use>
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
                 </svg>
               </a>
             </li>
             <li class="socials-footer-item">
               <a class="socials-icon-link" href="" target="_blank">
                 <svg width="24" height="24" class="socials-icon">
-                  <use href="./images/symbol-defs.svg#icon-facebook-1"></use>
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
                 </svg>
               </a>
             </li>
             <li class="socials-footer-item">
               <a class="socials-icon-link" href="" target="_blank">
                 <svg width="24" height="24" class="socials-icon">
-                  <use href="./images/symbol-defs.svg#icon-linkedin-1"></use>
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
                 </svg>
               </a>
             </li>
