--- a/index.html
+++ b/index.html
@@ -143,21 +143,21 @@
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
-                      <svg width="16" height="16">
+                      <svg width="16" height="16" class="socials-icon">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
-                      <svg width="16" height="16">
+                      <svg width="16" height="16" class="socials-icon">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
-                      <svg width="16" height="16">
+                      <svg width="16" height="16" class="socials-icon">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -185,21 +185,21 @@
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
-                      <svg width="16" height="16">
+                      <svg width="16" height="16" class="socials-icon">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
-                      <svg width="16" height="16">
+                      <svg width="16" height="16" class="socials-icon">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
-                      <svg width="16" height="16">
+                      <svg width="16" height="16" class="socials-icon">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -227,21 +227,21 @@
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
-                      <svg width="16" height="16">
+                      <svg width="16" height="16" class="socials-icon">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
-                      <svg width="16" height="16">
+                      <svg width="16" height="16" class="socials-icon">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
-                      <svg width="16" height="16">
+                      <svg width="16" height="16" class="socials-icon">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -269,21 +269,21 @@
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
-                      <svg width="16" height="16">
+                      <svg width="16" height="16" class="socials-icon">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
-                      <svg width="16" height="16">
+                      <svg width="16" height="16" class="socials-icon">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="socials-list-item">
                     <a class="team-icon-link" href="" target="_blank">
-                      <svg width="16" height="16">
+                      <svg width="16" height="16" class="socials-icon">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
