--- a/index.html
+++ b/index.html
@@ -302,13 +302,11 @@
             <li class="portfolio-item-picture">
               <div class="portfolio-cover-wrap">
                 <img src="./images/img1.jpg" alt="Banking App" width="360" />
-                <div class="portfolio-text-wrap">
-                  <p class="portfolio-img-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
+                <p class="portfolio-img-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
               </div>
               <div class="portfolio-item-info">
                 <h3 class="portfolio-item-title">Banking App</h3>
@@ -322,49 +320,45 @@
                   alt="Cashless Payment"
                   width="360"
                 />
-                <div class="portfolio-text-wrap">
-                  <p class="portfolio-img-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
-                <div class="portfolio-item-info">
-                  <h3 class="portfolio-item-title">Cashless Payment</h3>
-                  <p class="portfolio-item-description">Marketing</p>
-                </div>
+                <p class="portfolio-img-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="portfolio-item-info">
+                <h3 class="portfolio-item-title">Cashless Payment</h3>
+                <p class="portfolio-item-description">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item-picture">
               <div class="portfolio-cover-wrap">
                 <img src="./images/img3.jpg" alt="Meditation App" width="360" />
-                <div class="portfolio-text-wrap">
-                  <p class="portfolio-img-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
-                <div class="portfolio-item-info">
-                  <h3 class="portfolio-item-title">Meditation App</h3>
-                  <p class="portfolio-item-description">App</p>
-                </div>
+
+                <p class="portfolio-img-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="portfolio-item-info">
+                <h3 class="portfolio-item-title">Meditation App</h3>
+                <p class="portfolio-item-description">App</p>
               </div>
             </li>
             <li class="portfolio-item-picture">
               <div class="portfolio-cover-wrap">
                 <img src="./images/img4.jpg" alt="Taxi Service" width="360" />
-                <div class="portfolio-text-wrap">
-                  <p class="portfolio-img-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
-                <div class="portfolio-item-info">
-                  <h3 class="portfolio-item-title">Taxi Service</h3>
-                  <p class="portfolio-item-description">Marketing</p>
-                </div>
+
+                <p class="portfolio-img-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="portfolio-item-info">
+                <h3 class="portfolio-item-title">Taxi Service</h3>
+                <p class="portfolio-item-description">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item-picture">
@@ -374,33 +368,31 @@
                   alt="Screen Illustrations"
                   width="360"
                 />
-                <div class="portfolio-text-wrap">
-                  <p class="portfolio-img-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
-                <div class="portfolio-item-info">
-                  <h3 class="portfolio-item-title">Screen Illustrations</h3>
-                  <p class="portfolio-item-description">Design</p>
-                </div>
+
+                <p class="portfolio-img-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="portfolio-item-info">
+                <h3 class="portfolio-item-title">Screen Illustrations</h3>
+                <p class="portfolio-item-description">Design</p>
               </div>
             </li>
             <li class="portfolio-item-picture">
               <div class="portfolio-cover-wrap">
                 <img src="./images/img6.jpg" alt="Online Courses" width="360" />
-                <div class="portfolio-text-wrap">
-                  <p class="portfolio-img-text">
-                    14 Stylish and User-Friendly App Design Concepts · Task
-                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
-                    App · Cloud Storage App
-                  </p>
-                </div>
-                <div class="portfolio-item-info">
-                  <h3 class="portfolio-item-title">Online Courses</h3>
-                  <p class="portfolio-item-description">Marketing</p>
-                </div>
+
+                <p class="portfolio-img-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
+              <div class="portfolio-item-info">
+                <h3 class="portfolio-item-title">Online Courses</h3>
+                <p class="portfolio-item-description">Marketing</p>
               </div>
             </li>
           </ul>
